--- a/huawei-rtc-classroom/react/src/global.config.scss
+++ b/huawei-rtc-classroom/react/src/global.config.scss
@@ -1,12 +1,9 @@
+@import '~antd/dist/antd.css';
 @font-face {
   font-family: 'iconfont';
   src: url('./assets/font/iconfont.woff2?t=1628822254970') format('woff2'),
        url('./assets/font/iconfont.woff?t=1628822254970') format('woff'),
        url('./assets/font/iconfont.ttf?t=1628822254970') format('truetype');
-}
-
-* {
-  box-sizing: border-box;
 }
 
 body {
@@ -16,9 +13,32 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: linear-gradient(
+    200.96deg,
+    #fedc2a -29.09%,
+    #dd5789 51.77%,
+    #7a2c9e 129.35%
+  );
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+.loading {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0,0,0,0.7);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  z-index: 99999999;
+}
+#root {
+  width: 100%;
+  height: 100%;
 }
