fix # update classroom

--- a/huawei-rtc-classroom/vue/src/global.config.scss
+++ b/huawei-rtc-classroom/vue/src/global.config.scss
@@ -8,3 +8,14 @@
 * {
   box-sizing: border-box;
 }
+ul,li{ padding:0;margin:0;list-style:none}
+
+html {
+  width: 100%;
+  height: 100%;
+  border: 1px solid #41404c;
+}
+body {
+  width: 100%;
+  height: 100%;
+}
