--- a/huawei-rtc-classroom/vue/src/global.config.scss
+++ b/huawei-rtc-classroom/vue/src/global.config.scss
@@ -18,4 +18,9 @@ html {
 body {
   width: 100%;
   height: 100%;
+  background-color: rgba(0,0,0,0) !important;
+  -webkit-user-select:none;
+  -moz-user-select:none;
+  -ms-user-select:none;
+  user-select:none;
 }
