--- a/huawei-rtc-electron/src/App.global.scss
+++ b/huawei-rtc-electron/src/App.global.scss
@@ -18,12 +18,13 @@ body {
   position: relative;
   color: white;
   height: 100vh;
-  background: linear-gradient(
-    200.96deg,
-    #fedc2a -29.09%,
-    #dd5789 51.77%,
-    #7a2c9e 129.35%
-  );
+  // background: linear-gradient(
+  //   200.96deg,
+  //   #fedc2a -29.09%,
+  //   #dd5789 51.77%,
+  //   #7a2c9e 129.35%
+  // );
+  background: transparent;
   font-family: sans-serif;
   overflow-y: hidden;
   display: flex;
@@ -37,7 +38,7 @@ body {
 #webcontainer {
   position: absolute;
   z-index: 0;
-  margin-top: 40px;
+  // margin-top: 40px;
   top: 0;
   bottom: 0;
   left: 0;
@@ -84,6 +85,7 @@ a:hover {
   left: 0;
   right: 0;
   bottom: 0;
+  background: transparent;
 }
 .loadingView {
   position: absolute;
